--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
   "author": {
     "name": "Unity",
     "email": "unity@example.com",
-    "url": "https://github.com/DLGL99GL/TestNoProtect.git"
+    "url": "https://github.com/DLGL99GL/TestNoProtect"
   }
 }
